--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
 
   <h2>🖼️ CV</h2>
   <ul>
-    <a href="https://www.canva.com/design/DAGrJ-kt-TQ/HhVTtu6FsHMOXqpq6xIj4A/view?utm_content=DAGrJ-kt-TQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h652071f99c" target="_blank" rel="noopener noreferrer">
-  Check out my cv here
+    <a href="https://www.canva.com/design/DAGrJ-kt-TQ/HhVTtu6FsHMOXqpq6xIj4A/view?utm_content=DAGrJ-kt-TQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h652071f99c" target="_blank" rel="noopener noreferrer">Check out my cv here
 </a>
   </ul>
 <a href="https://www.linkedin.com/in/veroniqueriviere/" target="_blank" rel="noopener noreferrer">
