--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
     ></iframe>
   </div>
   <h2>🎥 Video: Minett Video presented by Claire</h2>
+    <p>
+    This video was shot in Ellergrönn for a school project featuring Claire Masset
+  </p>
   <div class="video-horizontal">
     <iframe 
     src="https://www.youtube.com/embed/xTXIGuYR208" 
@@ -141,6 +144,18 @@
       title="Minett Tour"
     ></iframe>
   </div>
+  <h2>🎥 Video: French homework Video presented by Nilla</h2>
+      <p>
+    This video was shot in Kleinbettingen for a school project featuring Nilla Ferrari - imagine you become a start, tell the story of your life
+  </p>
+  <div class="video-horizontal">
+    <iframe 
+    src="https://www.youtube.com/embed/ivPqfBUJcN0" 
+      frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen
+      title="Minett Tour"
+    ></iframe>
+  </div>
+  
   <h2>📄 Content Writing</h2>
   <p>
     This presentation provides an in-depth analysis of a single press article on artificial intelligence, unpacking its key arguments, pros, and cons. It showcases the ability to critically evaluate media content and communicate nuanced views on AI’s impact.
