--- a/index.html
+++ b/index.html
@@ -9,28 +9,36 @@
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f8fb;
+      background: linear-gradient(120deg, #e0f7fa, #ffffff);
       color: #222;
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
-      padding: 2rem;
+      padding: 3rem 1rem 4rem;
+      min-height: 100vh;
+    }
+    img.avatar {
+      width: 120px;
+      border-radius: 50%;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
     h1 {
       color: #007acc;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 0.5rem;
     }
     p {
       max-width: 600px;
-      margin: 1rem auto 2rem;
-      font-size: 1.1rem;
+      margin: 1rem auto 2.5rem;
+      font-size: 1.15rem;
       line-height: 1.6;
+      font-weight: 500;
     }
     .links {
       display: flex;
-      gap: 2rem;
+      gap: 2.5rem;
       flex-wrap: wrap;
       justify-content: center;
       margin-bottom: 2rem;
@@ -38,42 +46,7 @@
     .link-card {
       background: white;
       border: 2px solid #007acc;
-      border-radius: 10px;
-      padding: 1.5rem 2rem;
+      border-radius: 12px;
+      padding: 1.5rem 3rem;
       text-decoration: none;
-      color: #007acc;
-      font-weight: bold;
-      font-size: 1.2rem;
-      transition: 0.3s ease;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .link-card:hover {
-      background: #007acc;
-      color: white;
-    }
-    footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-  </style>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
-</head>
-<body>
-
-  <h1>Welcome to RiverFlow Lu</h1>
-  <p>
-    Bridging creativity and code — I'm a tech communicator blending storytelling with digital finance expertise.  </p>
-    <p>From video content to fintech insights, explore my work across two focused portfolios.
-  </p>
-
-  <div class="links">
-    <a href="comms/" class="link-card">🎬 Communicators Portfolio</a>
-    <a href="digital-finance/" class="link-card">💼 Digital Finance Portfolio</a>
-  </div>
-
-  <footer>
-    © RiverFlow Lu – Portfolio Hub
-  </footer>
-</body>
-</html>
+      color: #0
